added spacing between reminderr and link

--- a/index.html
+++ b/index.html
@@ -21,13 +21,16 @@
         a:hover {
             color : white;
         }
+
+        .docsLink {
+            margin: 2em 0;
+        }
     </style>
 </head>
 <body>
     <h1>Hello, TypeScript</h1>
     <p>Remember to check your console.</p>
-    <p><a href="http://www.typescriptlang.org/docs/home.html">TypeScript Docs</a></p>
-
+    <p class="docsLink"><a href="http://www.typescriptlang.org/docs/home.html">TypeScript Docs</a></p>
     
     <script src="js/01-types.js"></script>
     <script src="js/02-functions.js"></script>
